Migrate the game launcher to use Tauri for smaller installers
Replaces the JavaFX-based launcher with a Tauri (Rust + Web Technologies) implementation, resulting in significantly smaller installer sizes and enabling live UI preview in Replit.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 1cefe4ec-3b6c-44bc-a858-0a870c9ee387
Replit-Commit-Checkpoint-Type: intermediate_checkpoint
Replit-Commit-Screenshot-Url: https://storage.googleapis.com/screenshot-production-us-central1/f31dbf13-7bf2-42af-865f-37cd53d05da9/1cefe4ec-3b6c-44bc-a858-0a870c9ee387/BiSSAcC